<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="profile_am">am:</string>
    <string name="profile_email">email:</string>
    <string name="profile_username">username:</string>
    <string name="profile_semester">semester:</string>
    <string name="profile_registered_year">registered year:</string>
    <string name="profile_social_edit">Edit %1$s</string>
    <string name="profile_social_edit_submit">OK</string>
    <string name="profile_social_edit_cancel">Cancel</string>
    <string name="profile_toast_clipboard">Copied!</string>
    <string name="profile_theme_title">Select theme</string>
    <string name="profile_theme_light">Light</string>
    <string name="profile_theme_dark">Dark</string>
    <string name="profile_theme_system">Follow system</string>
    <string name="profile_language_title">Select language</string>
    <string name="profile_language_english">English (US)</string>
    <string name="profile_language_greek">Greek</string>

    <!-- Details Titles -->
    <string name="profile_details_personal">Details</string>
    <string name="profile_details_socials">Socials</string>
    <string name="profile_details_settings">Settings</string>

    <!-- Personal details -->
    <string name="profile_personal_name">Display name</string>
    <string name="profile_personal_telephone">Telephone number</string>
    <string name="profile_personal_mail">Mail</string>
    <string name="profile_personal_description">Description</string>

    <!-- Social -->
    <string name="profile_socials_title">Socials</string>
    <string name="profile_socials_navigate_error">No application to handle this url</string>
    <string name="profile_socials_googleplus_title" translatable="false">Google+</string>
    <string name="profile_socials_facebook_title" translatable="false">Facebook</string>
    <string name="profile_socials_github_title" translatable="false">Github</string>
    <string name="profile_socials_twitter_title" translatable="false">Twitter</string>
    <string name="profile_socials_linkedin_title" translatable="false">LinkedIn</string>

    <!-- Settings -->
    <string name="profile_settings_account_title">Account</string>
    <string name="profile_settings_change_password">Change password</string>
    <string name="profile_settings_password_expiration">Last changed: %1$s</string>
    <string name="profile_settings_logout">Logout</string>
    <string name="profile_settings_appearance_title">Appearance</string>
    <string name="profile_settings_change_theme">Change theme</string>
    <string name="profile_settings_change_language">Change language</string>
    <string name="profile_settings_change_password_invalid">Invalid password</string>
    <string name="profile_settings_change_password_submit">Submit</string>
    <string name="profile_settings_change_password_old_hint">Old password</string>
    <string name="profile_settings_change_password_new_hint">New password</string>
    <string name="profile_settings_change_password_success">Password changed successfully</string>

    <!-- Options -->
    <string name="profile_option_copy">Copy</string>
    <string name="profile_option_edit">Edit</string>
</resources>