<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/selectThemeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/googlesans_medium"
        android:padding="20dp"
        android:text="@string/profile_theme_title"
        android:textColor="?attr/colorPrimary"
        android:textSize="16sp" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/selectThemeTitleTextView"
        android:background="?attr/colorControlNormal" />

    <RadioGroup
        android:id="@+id/selectThemeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/selectThemeTitleTextView"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/selectThemeLightRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/selector_theme"
            android:fontFamily="@font/googlesans_medium"
            android:paddingStart="14dp"
            android:text="@string/profile_theme_light"
            android:textColor="@color/selector_theme"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/selectThemeDarkRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/selector_theme"
            android:fontFamily="@font/googlesans_medium"
            android:paddingStart="14dp"
            android:text="@string/profile_theme_dark"
            android:textColor="@color/selector_theme"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/selectThemeSystemRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/selector_theme"
            android:fontFamily="@font/googlesans_medium"
            android:paddingStart="14dp"
            android:text="@string/profile_theme_system"
            android:textColor="@color/selector_theme"
            android:textSize="14sp" />
    </RadioGroup>
</RelativeLayout>