<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profileChangePasswordTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/commissioner_medium"
        android:padding="20dp"
        android:text="@string/profile_settings_change_password"
        android:textColor="?attr/colorOnBackground"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/profileChangePasswordSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_alignTop="@id/profileChangePasswordTitleTextView"
        android:layout_alignBottom="@id/profileChangePasswordTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:fontFamily="@font/commissioner_medium"
        android:gravity="center"
        android:padding="14dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/profile_settings_change_password_submit"
        android:textColor="?attr/colorSecondary" />

    <ProgressBar
        android:id="@+id/profileChangePasswordProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateTint="?attr/colorSecondary"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileChangePasswordOldPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileChangePasswordTitleTextView"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/profile_settings_change_password_old_hint"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileChangePasswordOldPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/commissioner_regular"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profileChangePasswordNewPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileChangePasswordOldPasswordInputLayout"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/profile_settings_change_password_new_hint"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileChangePasswordNewPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/commissioner_regular"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/invisibleMargin"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_below="@id/profileChangePasswordNewPasswordInputLayout"
        android:visibility="invisible" />
</RelativeLayout>